--- a/gb/20/11/6/n12531008.md
+++ b/gb/20/11/6/n12531008.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bfgrhg3918/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bfgrhg3918/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bfgrhg3918/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【成吉思汗】占领中都 夺取金国半壁河山</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/11/c736e3bbf3e57408155068fcb9c4ba51-600x400.jpg" />
 <h6>1212年秋，成吉思汗下令第二次攻金。（大纪元制图）
 </h6>
 <hr>
-<p><ahref="https://github.com/bfgrhg3918/djy/blob/master/gb/tag/%E6%88%90%E5%90%89%E6%80%9D%E6%B1%97.md#1">成吉思汗</a>1211年针对<ahref="https://github.com/bfgrhg3918/djy/blob/master/gb/tag/%E9%87%91%E5%9B%BD.md#1">金国</a>的攻势以<ahref="https://github.com/bfgrhg3918/djy/blob/master/gb/tag/%E8%92%99%E5%8F%A4.md#1">蒙古</a>军队的胜利结束，蒙古大军驻扎在<ahref="https://github.com/bfgrhg3918/djy/blob/master/gb/tag/%E9%87%91%E5%9B%BD.md#1">金国</a>北部边境修整，金国将领刘伯林、夹谷长哥等来降，他们后来都成为成吉思汗手下的干将。而哲别攻克金国的东京，让那里一心复国的契丹人、金千户耶律留哥也在1212年初公开叛金，自称“都元帅”，数月间发展至十多万人。其后他遇到进入辽东的蒙古军，耶律留哥以契丹军之名依附大蒙古国，并表示效忠成吉思汗。</p>
-<p>其后，金国派兵讨伐耶律留哥，<ahref="https://github.com/bfgrhg3918/djy/blob/master/gb/tag/%E6%88%90%E5%90%89%E6%80%9D%E6%B1%97.md#1">成吉思汗</a>遣三千骑兵支援，大败金兵。金人连续战败，而且损失不少兵力，且东北失控、河北一翼已失，单凭山西无力支撑。加之金主软弱无能、朝廷腐败、财政紧张，还有南宋的牵制，让金国上下对于战胜<ahref="https://github.com/bfgrhg3918/djy/blob/master/gb/tag/%E8%92%99%E5%8F%A4.md#1">蒙古</a>人已经没有太多信心。看似拥有5000万人口的金国，已经是泥足巨人。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%88%90%E5%90%89%E6%80%9D%E6%B1%97.md#1">成吉思汗</a>1211年针对<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%87%91%E5%9B%BD.md#1">金国</a>的攻势以<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%92%99%E5%8F%A4.md#1">蒙古</a>军队的胜利结束，蒙古大军驻扎在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%87%91%E5%9B%BD.md#1">金国</a>北部边境修整，金国将领刘伯林、夹谷长哥等来降，他们后来都成为成吉思汗手下的干将。而哲别攻克金国的东京，让那里一心复国的契丹人、金千户耶律留哥也在1212年初公开叛金，自称“都元帅”，数月间发展至十多万人。其后他遇到进入辽东的蒙古军，耶律留哥以契丹军之名依附大蒙古国，并表示效忠成吉思汗。</p>
+<p>其后，金国派兵讨伐耶律留哥，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%88%90%E5%90%89%E6%80%9D%E6%B1%97.md#1">成吉思汗</a>遣三千骑兵支援，大败金兵。金人连续战败，而且损失不少兵力，且东北失控、河北一翼已失，单凭山西无力支撑。加之金主软弱无能、朝廷腐败、财政紧张，还有南宋的牵制，让金国上下对于战胜<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%92%99%E5%8F%A4.md#1">蒙古</a>人已经没有太多信心。看似拥有5000万人口的金国，已经是泥足巨人。</p>
 <h2>连续攻金再围中都 金国内乱</h2>
 <p>1212年秋，成吉思汗下令第二次攻金。成吉思汗率主力围攻西京，金元帅左都监奥屯襄率军增援，成吉思汗将其诱至西京东北密谷口伏击圈内，将其全部歼灭。其后继续攻打西京城，攻城时，成吉思汗中流箭，遂下令撤围。</p>
 <p>1213年三月，耶律留哥在东北称王，国号辽，史称东辽国，为大蒙古国的附属国。七月，成吉思汗第三次南下攻金，先行攻取之前所弃后被金兵复据的长城边堡，其后攻下宣德府、德兴府，并率主力与金军战于宣德东南的怀来县（今河北怀来东）。</p>
 <p>金军由完颜纲、术虎高琪统帅十余万人。几番交战，金军不敌溃退，蒙古军乘胜追击直抵居庸关北口。</p>
 <p>居庸关乃天险，分南北两口，两口间有两山夹峙，中间还有深涧，易守难攻。金国在此屯下重兵，并冶铁封固狭窄的关门，还在居庸关外百余里的地方布下铁蒺藜，严防蒙古人进攻。成吉思汗料到强攻必将危险重重，遂避实击虚，只留少部分兵力在北口佯攻，另派出使过金朝的札八儿火者引导哲别走小道袭取南口，南北夹击，夺取居庸关。成吉思汗则亲率主力迂回南下。</p>
-<figure id="attachment_12545945" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/11/getCollectionImage.jpg"><img class="size-medium wp-image-12545945" src="https://i.epochtimes.com/assets/uploads/2020/11/getCollectionImage-450x916.jpg" alt="" width="450" b="916" /></a><figcaption class="wp-caption-text">清 董邦达《居庸叠翠图》。（国立故宫博物院提供）</figcaption></figure>
+<figure id="attachment_12545945" aria-describedby="caption-attachment-12545945" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/11/getCollectionImage.jpg"><img class="size-medium wp-image-12545945" src="https://i.epochtimes.com/assets/uploads/2020/11/getCollectionImage-450x916.jpg" alt="" width="450" b="916" /></a><figcaption id="caption-attachment-12545945" class="wp-caption-text">清 董邦达《居庸叠翠图》。（国立故宫博物院提供）</figcaption></figure>
 <p>金人得知蒙古人的意图后，急派奥屯襄率军来阻止。等其赶到紫荆关（今河北易县西北）时，蒙古大军已经过了关隘，成吉思汗命木华黎抵御奥屯襄军。双方在五回岭交战，金军大败，蒙古军遂向东而去。</p>
 <p>此时金国出现了内乱。前文提到的西京守将胡沙虎1211年逃回中都后，不仅没有被治罪，还被升为右副元帅、权尚书左丞。他更加肆无忌惮，自请步骑二万屯宣德州，但朝廷只拨了三千人给他，令驻妫川。</p>
 <p>1212年正月，胡沙虎请求移屯他处，引起朝廷不满，被问罪，罢归田里。次年，胡沙虎又被召至中都，预议军事，但宰相徒单镒等人认为不可以任用胡沙虎，其又被罢官。被罢官后，胡沙虎极力结交皇帝完颜永济左右的宦官侍者，以求再被启用。五月，他被任命为右副元帅，统帅武卫军数千人，屯中都城北。</p>
@@ -27,7 +27,7 @@
 <h2>金都南迁 蒙古取中都</h2>
 <p>成吉思汗的蒙古大军驻扎在中都北郊直到1214年春三月，诸将请命乘胜破中都，成吉思汗没有同意，而是派使臣对金宣宗说：“金国的山东、河北郡县已经悉数为我所占，你们所守卫的只剩下燕京城（中都）罢了。上天既然已经让你变得虚弱，我再迫使你进入险境，上天会怎么看我呢？所以我打算还军，但是（我的手下不同意），你可以用什么办法消弭我蒙古诸将的愤怒呢？”</p>
 <p>金宣宗与大臣们一起商议，有的主战，有的主和，即等蒙古人退兵后，再为战守之计。于是，金宣宗遣使求和，将卫绍王之女岐国公主及金帛、童男女五百、马三千匹献给成吉思汗，还派遣丞相完颜福兴送成吉思汗一行出居庸关。签订和约后，成吉思汗撤兵，全军北返。金国得到了一个暂时喘息的机会。</p>
-<figure id="attachment_12545693" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/11/a5b4fe547c1f76a235bc0150cd5f4c28.jpeg"><img class=" wp-image-12545693" src="https://i.epochtimes.com/assets/uploads/2020/11/a5b4fe547c1f76a235bc0150cd5f4c28-450x392.jpeg" alt="" width="600" b="523" /></a><figcaption class="wp-caption-text">金宣宗为了与蒙古和谈以解中都之围，1214年将卫绍王的女儿岐国公主（图中左边马上的人物）送给成吉思汗和亲，而后蒙古退回漠北地区。本图出自《史集》。（公有领域）</figcaption></figure>
+<figure id="attachment_12545693" aria-describedby="caption-attachment-12545693" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/11/a5b4fe547c1f76a235bc0150cd5f4c28.jpeg"><img class=" wp-image-12545693" src="https://i.epochtimes.com/assets/uploads/2020/11/a5b4fe547c1f76a235bc0150cd5f4c28-450x392.jpeg" alt="" width="600" b="523" /></a><figcaption id="caption-attachment-12545693" class="wp-caption-text">金宣宗为了与蒙古和谈以解中都之围，1214年将卫绍王的女儿岐国公主（图中左边马上的人物）送给成吉思汗和亲，而后蒙古退回漠北地区。本图出自《史集》。（公有领域）</figcaption></figure>
 <p>五月，金宣宗大赦国内，并以国蹙兵弱、财政匮乏不能守中都为由，且不顾徒单镒和太学生的反对，决定迁都南京汴京（今开封），希望可以依靠黄河天险来保护京城，并命完颜福兴及参政抹撚尽忠辅佐太子守忠，留守中都。不过，真实的原因是金宣宗畏惧蒙古军再攻中都，以使自己陷入险境。</p>
 <p>在金宣宗行至中都西南的良乡时，命令护送的契丹降军将原先发给他们的铠甲马匹全部交官。由是契丹降军知晓金国不讲信义，便口出怨言，甚至作乱，杀死了金人主帅，推举斫答等契丹人为帅，向中都进攻。中都主帅完颜承晖派兵阻挡，斫答派人乞降于成吉思汗，并请求援助。</p>
 <p>当时成吉思汗在鱼儿泺（今河北张北县西北，地处内蒙古高原东南缘）避暑。当他听说金主南迁与斫答之变，大怒道：“金主既然与我和好共处，却选择南迁，是因为有疑心，不过拿和议来诳我啊。”</p>
@@ -40,7 +40,7 @@
 <p>蒙古军占领中都后，将其更名为燕京，成吉思汗派失吉忽突忽、汪古儿和哈撒儿去犒劳，并检视中都城府库的财物，将其一概运往蒙古草原。金国守库的小吏自作聪明将一些财物送给三人，只有失吉忽突忽予以拒绝。他说：“这些东西之前都是金国皇帝的，被我们所占有，现在就是成吉思汗的财物，所有人都不能私占一分一毫。”成吉思汗听说后，称赞了失吉忽突忽。</p>
 <p>七月，成吉思汗遣使晓谕金宣宗：“如果以河北山东未被攻下的城池来献，并撤去金主帝号，可以改封金主为河南王。蒙古也将罢兵。”金宣宗予以回绝。</p>
 <p>知晓汉人工匠的好处后，蒙古人在攻城略地的同时，特别注重搜寻工匠，有时一城即得数万。得到众多工匠后，成吉思汗下令建立工匠军，设厂冶铁制造兵器。此外，蒙古人还在通信联络上创建“箭速传骑”，日速数百里，军令传递和军队调遣速度加快，善于发挥骑兵之长，有“蒙古旋风”之称。</p>
-<figure id="attachment_12545976" style="width: 599px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/11/5be0248da1857a3f6508f32d7989e9a0.jpeg"><img class=" wp-image-12545976" src="https://i.epochtimes.com/assets/uploads/2020/11/5be0248da1857a3f6508f32d7989e9a0-450x354.jpeg" alt="" width="599" b="471" /></a><figcaption class="wp-caption-text">1215年，蒙古军围攻金国中都。本图出自《史集》。（公有领域）</figcaption></figure>
+<figure id="attachment_12545976" aria-describedby="caption-attachment-12545976" style="width: 599px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/11/5be0248da1857a3f6508f32d7989e9a0.jpeg"><img class=" wp-image-12545976" src="https://i.epochtimes.com/assets/uploads/2020/11/5be0248da1857a3f6508f32d7989e9a0-450x354.jpeg" alt="" width="599" b="471" /></a><figcaption id="caption-attachment-12545976" class="wp-caption-text">1215年，蒙古军围攻金国中都。本图出自《史集》。（公有领域）</figcaption></figure>
 <h2>夺金国半壁河山</h2>
 <p>蒙古人的连番攻势，使金政权岌岌可危。此时，蒙古人业已攻占包括中都在内的城邑共862座，金国的版图在缩小。</p>
 <p>1216年春，成吉思汗从鱼儿泺回到庐朐河行宫（今蒙古国东部克鲁伦河边），为了尽快攻破辽西及中原州县、加重对金国南京的压力，他派扯儿必（侍从官之意）脱仑和木华黎平定关东一带尚未攻克的地方。半年内，基本平定。</p>
@@ -58,54 +58,54 @@
 《成吉思汗与今日世界之形成》<br />
 《中国历代战争史》（元朝） 台湾出版<br />
 《金史》</p>
-<p>点阅【<ahref="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4972.md#1">成吉思汗</a>】系列文章</p>
+<p>点阅【<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/nf4972.md#1">成吉思汗</a>】系列文章</p>
 <p>责任编辑：张宪义</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/10/28/n12508972.md#1">【成吉思汗】攻金初战告捷 喜获汉人猛将</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/10/18/n12484637.md#1">【成吉思汗】三征西夏得助力 剑指大金国</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/10/14/n12475583.md#1">【成吉思汗】颁布大扎撒 长生天信仰入法典</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/10/10/n12467270.md#1">【成吉思汗】建大蒙古国 封功臣 扩怯薛军</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/10/5/n12455271.md#1">【成吉思汗】战王汗与札木合 称雄草原</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/10/3/n12451054.md#1">【成吉思汗】征服草原之战 所向披靡</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/10/2/n12448572.md#1">【成吉思汗】宽仁服众 推改革 招揽人才</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/9/21/n12420405.md#1">【成吉思汗】姻缘定 英雄聚 铁木真崛起</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/7/30/n12294991.md#1">【成吉思汗】降生草原 绝境中成长</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/20/n13591160.md#1">四海宾服 明成祖四次为外国加封镇山</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/11/22/n13391787.md#1">燕王朱棣承天命 知名相师袁廷玉预言准</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/28/n13122430.md#1">【忽必烈传】开文明之治 圣德皇帝千古留名</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/28/n13121233.md#1">民间出天子的异象 桑树如华盖 虫蚀柳叶出文字</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/23/n13110780.md#1">【忽必烈传】贤后察必辅佐 治家有方教子严</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/9/n13079166.md#1">【忽必烈传】征高丽攻日本 招抚南海诸国</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/9/n13079158.md#1">【忽必烈传】马可眼中的皇帝与大元帝国</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/6/n13071964.md#1">【忽必烈传】平诸王叛乱 加强边疆治理</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/2/n13063820.md#1">【忽必烈传】慎刑罚 济贫困 惠泽百姓</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/6/28/n13053500.md#1">【忽必烈传】选英才 善纳谏 崇尚节俭</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/20/n10157890.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（四）</a></li><li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/8/n10127794.md#1" target="_blank">豪门女总裁的私人生活</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/23/n10243539.md#1" target="_blank">中共淫乱的前生今世（5）公共情妇门</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11178933.md#1" target="_blank">亚利桑那媒体：中共强摘器官对美国有何影响</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/6/n12529751.md#1">中枪转生协警缉凶  双胎记男孩会前世妻儿</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/13/n12546586.md#1">紫微斗数推算  小谈拜登真能登大位吗？</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/9/13/n12399763.md#1">既是“于青菜”又是“于青天”——清朝廉吏于成龙</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/10/31/n12514973.md#1">别装熟！想广结善缘 但这行为真的很讨人厌</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12556563.md#1">【横河观点】川普“法律战”兵分多路</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/18/n12557186.md#1">【拍案惊奇】神秘警卫深揭舞弊 黑手党老大做票</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12557021.md#1">【远见快评】美大选舞弊重磅证词 更多黑幕</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12552183.md#1">【翻墙必看】拜登又一大丑闻曝光 涉奥巴马</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12554108.md#1">计算“邮寄选票”后反超   纽约众议员布朗斯汀宣布胜选</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553767.md#1">被央视污言秽语狂骂 蓬佩奥：继续制裁</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12554448.md#1">“八路军”住别墅抹发胶 中共抗日剧太雷人</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12554623.md#1">陪孙俪选窗帘意见遭否定 邓超反问获网友趣答</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/15/n12551581.md#1">迪士尼CEO承认 《花木兰》因争议影响票房</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/15/n12551768.md#1">赵树海70岁生日出专辑 不禁直呼想念小孙女</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553368.md#1">台研发全球首株抗体 可直接杀死癌细胞</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/13/n12547278.md#1">还在到处发名片？不要让自己成为人脉怪兽</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12552492.md#1">在教堂住12年 英国流浪猫过世获纪念仪式</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12555428.md#1">甘肃男子带“老虎”逛街 路人回头率100%</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689765.md#1">【远见快评】傅政华双开通报 3大谜团全解析</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bfgrhg3918/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bfgrhg3918/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/6/n12531008.htm">【成吉思汗】占领中都 夺取金国半壁河山</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/11/6/n12531008.htm">【成吉思汗】占领中都 夺取金国半壁河山</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/6/n12531008.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bfgrhg3918/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bfgrhg3918/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/11/6/n12531008.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
