--- a/gb/20/2/6/n11848782.md
+++ b/gb/20/2/6/n11848782.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ohifsq339/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ohifsq339/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ohifsq339/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ohifsq339/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ohifsq339/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ohifsq339/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ohifsq339/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ohifsq339/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ohifsq339/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ohifsq339/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ohifsq339/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ohifsq339/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ohifsq339/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ohifsq339/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ohifsq339/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ohifsq339/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ohifsq339/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ohifsq339/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ohifsq339/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ohifsq339/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ohifsq339/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ohifsq339/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ohifsq339/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ohifsq339/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>水墨大师韩锦田八十回顾展 新品旧作各有风采</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/02/425419-600x400.jpg" />
 <h6>韩锦田与家人、文化局长田昭容（左二）、策展人陈韵竹（右二）在大幅画作前合影。（林宝云／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年02月06日讯】（大纪元记者林宝云台湾新竹报导）有五全才子美誉的艺术家韩锦田，6日起在文化局美术馆105展览厅举办“不同凡马-韩锦田八十<ahref="https://github.com/ohifsq339/djy/blob/master/gb/tag/%E5%9B%9E%E9%A1%BE%E5%B1%95.md#1">回顾展</a>”。40多幅新旧画作各有风采。其中一幅人物画作源于38年前所创，此次置在花草鸟兽、山水画作品中同展、特别引人注目。</p>
+<p>【大纪元2020年02月06日讯】（大纪元记者林宝云台湾新竹报导）有五全才子美誉的艺术家韩锦田，6日起在文化局美术馆105展览厅举办“不同凡马-韩锦田八十<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%9B%9E%E9%A1%BE%E5%B1%95.md#1">回顾展</a>”。40多幅新旧画作各有风采。其中一幅人物画作源于38年前所创，此次置在花草鸟兽、山水画作品中同展、特别引人注目。</p>
 <p>文化局长田昭容表示，韩大师为新竹地区著名盆栽艺术家与水墨画家，人随和幽默，有古风侠义。个性爽朗好客率真，广结善缘。其脱俗的人格特质、奔放的豪情，令人崇敬。他的泼墨彩法，透过宣染技巧，江山描绘的云涌山动，散发着孤傲不逊的情怀，与对人世间万物的热力。另画中也可悟略到自然古朴与超然灵性。感谢大师把艺术之美传播到每一个地方，充分发挥艺术教育的功能。</p>
-<figure id="11848786" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/02/6c2f0fa1c360d7fa38cd223deb3917cc-450x338.jpg" alt="展出创新画作之一" width="500" /><figcaption class="wp-caption-text">展出创新画作之一。（林宝云／大纪元）</figcaption></figure>
-<figure id="attachment_11848915" style="width: 500px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/02/425420.jpg"><img class="wp-image-11848915" src="https://i.epochtimes.com/assets/uploads/2020/02/425420-533x400.jpg" alt="" width="500" b="375" /></a><figcaption class="wp-caption-text">38年前韩锦田用画笔留下妻子在大阪城喂鸽子的美丽画面。（林宝云／大纪元）</figcaption></figure>
+<figure id="11848786" aria-describedby="caption-11848786" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/02/6c2f0fa1c360d7fa38cd223deb3917cc-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/02/6c2f0fa1c360d7fa38cd223deb3917cc-450x338.jpg" alt="展出创新画作之一" width="500" /></a><figcaption id="caption-11848786" class="wp-caption-text">展出创新画作之一。（林宝云／大纪元）</figcaption></figure>
+<figure id="attachment_11848915" aria-describedby="caption-attachment-11848915" style="width: 500px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/02/425420.jpg"><img class="wp-image-11848915" src="https://i.epochtimes.com/assets/uploads/2020/02/425420-533x400.jpg" alt="" width="500" b="375" /></a><figcaption id="caption-attachment-11848915" class="wp-caption-text">38年前韩锦田用画笔留下妻子在大阪城喂鸽子的美丽画面。（林宝云／大纪元）</figcaption></figure>
 <p>精通画、诗、书、盆栽、品茗的韩锦田，表示他最幸运就是结识国画大师张大千，机缘到他家看盆栽，看到他刻的花盆图样很赏识并得知他喜欢画画后，鼓励他要再画画，从此展开师徒缘。他这一生中最就喜欢就是画画与盆栽，画画是画进去不能再出来，盆栽是枝剪掉后不能再进去，两者在入与出。画画可以一挥而就快速完成，盆栽要几十年的耐心培养，二者皆是生命力的表达。</p>
-<figure id="11848787" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/02/34fc7af5c730f934cef9a603a92eb870-450x338.jpg" alt="韩锦田指着画说：一笔画下去让墨自然晕开，之后再画艘小船，意境就出来了。" width="500" /><figcaption class="wp-caption-text">韩锦田指着画说：一笔画下去让墨自然晕开，之后再画艘小船，意境就出来了。（林宝云／大纪元）</figcaption></figure>
+<figure id="11848787" aria-describedby="caption-11848787" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/02/34fc7af5c730f934cef9a603a92eb870-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/02/34fc7af5c730f934cef9a603a92eb870-450x338.jpg" alt="韩锦田指着画说：一笔画下去让墨自然晕开，之后再画艘小船，意境就出来了。" width="500" /></a><figcaption id="caption-11848787" class="wp-caption-text">韩锦田指着画说：一笔画下去让墨自然晕开，之后再画艘小船，意境就出来了。（林宝云／大纪元）</figcaption></figure>
 <p>韩锦田说，他的座右铭是“上天不能阻碍穷人奋斗”，但最重要的是“坚持”。画画很简单，困难是在找自己的风格。这次展出多幅创新画作，观众细心欣赏可以从中发现画面呈现出多样的舒展及空灵。</p>
-<figure id="11848788" style="width: 500px" class="wp-caption aligncenter"><img src="https://i.epochtimes.com/assets/uploads/2020/02/e19f31b43a0899a44570b5ee09fb61d5-450x300.jpg" alt="韩锦田八十回顾展展出40多幅画作" width="500" /><figcaption class="wp-caption-text">韩锦田八十<ahref="https://github.com/ohifsq339/djy/blob/master/gb/tag/%E5%9B%9E%E9%A1%BE%E5%B1%95.md#1">回顾展</a>展出40多幅画作（林宝云／大纪元）</figcaption></figure>
+<figure id="11848788" aria-describedby="caption-11848788" style="width: 500px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/02/e19f31b43a0899a44570b5ee09fb61d5-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img src="https://i.epochtimes.com/assets/uploads/2020/02/e19f31b43a0899a44570b5ee09fb61d5-450x300.jpg" alt="韩锦田八十回顾展展出40多幅画作" width="500" /></a><figcaption id="caption-11848788" class="wp-caption-text">韩锦田八十<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%9B%9E%E9%A1%BE%E5%B1%95.md#1">回顾展</a>展出40多幅画作（林宝云／大纪元）</figcaption></figure>
 <p>策展人陈韵竹表示，这次展出韩老师的泼墨、泼彩的作品，一般都要经过10几道工绪，让远、中、近层次以及雾色，在墨水窜变中显现出来。韩锦田的儿子、担任艺术经济人的韩眺柏也指出，人物、花鸟画的相似度高，泼彩的画法每张效果都不一样，其至气温变化都对画作有影响。“不同凡马-韩锦田八十回顾展”活动展至23日，开幕典礼于2月9日(日)下午二时举行。</p>
 <p>责任编辑：英祯</p>
 
@@ -21,48 +21,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/17/4/16/n9042616.md#1">郑善禧的彩墨视界邀请展</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/17/5/24/n9178823.md#1">客籍水墨大师赖元龙彩墨展   文化局展出</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/18/2/23/n10166328.md#1">大师级的心灵飨宴：“科学与美学的对话”</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/18/12/5/n10893135.md#1">台籍画家蔡烈辉82岁回顾展 芝加哥文化中心展出</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/19/2/2/n11020332.md#1">纪美华60回顾展 展出咏叹玉山500号大画作</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/19/2/18/n11053327.md#1">蔡淑霞、谢素梅书画联展 即日起云林展出</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/19/7/16/n11388040.md#1">中部七画家首赴美 “台湾色彩”DC展风采</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/7/n12386495.md#1">好物齐聚挖宝乐 饕宝好物生活节周末竹市登场</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/7/n12386154.md#1">开放美猪美牛进口 苏贞昌：会明白标示及管理</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/7/n12386115.md#1">出席祭祀大典 蔡英文：义民精神就是台湾精神</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/4/16/n9042616.md#1">郑善禧的彩墨视界邀请展</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/24/n9178823.md#1">客籍水墨大师赖元龙彩墨展   文化局展出</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/2/23/n10166328.md#1">大师级的心灵飨宴：“科学与美学的对话”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/5/n10893135.md#1">台籍画家蔡烈辉82岁回顾展 芝加哥文化中心展出</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/2/2/n11020332.md#1">纪美华60回顾展 展出咏叹玉山500号大画作</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/2/18/n11053327.md#1">蔡淑霞、谢素梅书画联展 即日起云林展出</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/7/16/n11388040.md#1">中部七画家首赴美 “台湾色彩”DC展风采</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690657.md#1">竹市增2名确诊 为关东国小确诊学童同班同学</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688404.md#1">双北2确诊者曾到新竹用餐 竹市府公布足迹</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688363.md#1">苗栗铁马进香文化活动 报名平台即将启动</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/21/n10237420.md#1" target="_blank">中共淫乱的前生今世（4）央视“后宫”</a></li><li><a href="https://github.com/ohifsq339/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/5/n10830342.md#1" target="_blank">走出磨难 费城女医生找到真正的自我</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/3/n11630909.md#1" target="_blank">林辉：中共对万里长城的破坏与利用</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/21/n11398694.md#1" target="_blank">7·20华府演讲 大卫·乔高：中共是杀人犯</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/8/29/n12366244.md#1">乐山大佛洗脚天下乱 刘伯温预言了出路</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/1/n12373464.md#1">北宋有位“鱼头参政” 让皇帝感动让同僚敬畏</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/4/n12380954.md#1">【馨香雅句】原来这项技能承传千年 曾让中国人武艺高强</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/2/n12374931.md#1">《傲慢与偏见》：19世纪名著至今仍能启迪人心</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/8/10/n12318970.md#1">【命理】为何王侯将相命中多见七杀凶星？</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/7/n12386820.md#1">【重播】川普劳工节再提：美中经济脱钩</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/7/n12385988.md#1">【一线采访视频版】拒灭绝文化 内蒙1.8万人联名抗议</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/8/n12388058.md#1">【西岸观察】挺川普 全美游艇游行创纪录</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/5/n12383239.md#1">【新闻看点】中共触底线白宫震惊 习危险来了</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/6/n12383819.md#1">500亿加密货币出逃 专家归因中共沉船效应</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/6/n12384093.md#1">腾讯微博本月底将停止服务和运营</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/6/n12384714.md#1">陆网民看盗版《花木兰》撑警女主角遭六成差评</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/5/n12383230.md#1">台影迷抵制刘亦菲《花木兰》 港网友感动致谢</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/6/n12383538.md#1">曾入围金曲歌王 严咏能台上昏倒不治 享年50岁</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/7/n12385497.md#1">阿娇下榻厦门酒店出意外 头部受伤送医治疗</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/6/n12384834.md#1">袁咏仪晒全家福庆生 包包造型蛋糕最别致</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/6/n12383740.md#1">血旗拿反士兵晕倒 中共军队在国际赛场出糗</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/6/n12383875.md#1">加拿大10岁男童遭美洲狮攻击 小狗奋勇救人</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/6/n12383992.md#1">美国空姐分享入住旅馆诀窍 网上爆红</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/7/n12385823.md#1">美军B-2轰炸机降落印度洋小岛 画面曝光</a></li>
-<li><a href="https://github.com/ohifsq339/djy/blob/master/gb/20/9/5/n12382815.md#1">百年来仅三次 25米长罕见蓝鲸现悉尼海岸</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ohifsq339/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ohifsq339/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/6/n11848782.htm">水墨大师韩锦田八十回顾展 新品旧作各有风采</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/2/6/n11848782.htm">水墨大师韩锦田八十回顾展 新品旧作各有风采</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/ohifsq339/djy/blob/master/gb/20/2/6/n11848782.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ohifsq339/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ohifsq339/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ohifsq339/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ohifsq339/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ohifsq339/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/2/6/n11848782.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
