--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -68,7 +68,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/11/n10705738.md#1" target="_blank">古玉文：红谍郭汝瑰不忘初心 助共为虐食苦果</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/10/n11580971.md#1" target="_blank">好莱坞大奖获得者 一位北京青年的音乐路</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/31/n9789303.md#1" target="_blank">林辉：曾大红大紫的魏巍被批判与软禁的人生</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/20/n11466682.md#1" target="_blank">患脑瘤等死 中共总参工程师炼法轮功后痊愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
