--- a/gb/22/4/2/n13690935.md
+++ b/gb/22/4/2/n13690935.md
@@ -84,7 +84,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217581.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/22/n10581299.md#1" target="_blank">绝路逢生  台湾女子找到心灵的蓝天</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/31/n11758706.md#1" target="_blank">张林：共军在朝鲜战争中丧生两百万（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/11/26/n3738443.md#1" target="_blank">云帆：一水之隔　云泥之别</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
